Fri Nov 29 12:43:07 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garter.adb: On the boot server, launch the termination task
	  only if this partition is not permanent. On other partitions,
	  reject global termination if the partition is permanent.

	* s-garopt.ads: Added support for the new 'Permanent attribute.

	* s-garopt.adb: Ditto.

Thu Nov 28 22:33:30 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Adapted for new elaboration packages.

	* two.py: Serial-line connector simulator (connects two sockets).

	* serial.c: Serial-line simulator using sockets. Changed procedure
	names to match the ones used in Spif.

	* s-gaseli.adb: Optimization. Changed procedure names to match the
	ones used in Spif.

	* s-garhea.adb: Added debug entries.

	* s-garela.adb: Removed useless faulty lines (do not work with
	serial protocol).

	* s-rpc.adb: Handle task non-abortion (which is quite frequent :-)
	more elegantly than before. It also corrects a strange
	segmentation fault in GNAT runtime which appeared only when
	debugging was off (that is a fast succession of events, probably a
	race condition in protected objects and entry family handling).
	
Wed Nov 27 18:42:47 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-stratt.adb: Added pragma Suppress for range and overflow
	  checks.

	* s-gaseli.adb: Changed the protocol to make it simpler.
	  Changed this stupid protocol one more time.

Tue Nov 26 15:52:33 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-ganobl.adb: Changed the safety delay to be 0.5 seconds.

Sat Nov 23 16:57:56 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Added missing constant.

Thu Nov 21 19:45:25 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Protect against very early internal error which
	  could propagate even when it's not fatal.

	* s-rpc.adb: Do not wait on protected entry in a finalization
	  procedure called during abortion. A flag showing that the result